--- a/css/ruxton.css
+++ b/css/ruxton.css
@@ -160,7 +160,7 @@ h1 {
     font-family: 'athelasbold', Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 100px;
 	line-height: 90px;
-	margin-bottom: -40px;
+	margin-bottom: 20px;
 	letter-spacing: -1.5px;
 }
 h2 {
@@ -405,6 +405,11 @@ a.link{
 	padding-top: 30px;
 	margin-top: 93px;
 }
+#header a.btn-primary {
+	float: right;
+	padding: 0px 30px;
+	margin: 10px auto 45px auto;
+}
 @media(max-width:767px) {
 		#header {
 		min-height: 530px;
@@ -422,7 +427,6 @@ a.link{
 	text-transform:uppercase;
 }
 #header h1, #header p{
-	float: right;
 	text-align: right;
 }
 .line-blue {
@@ -517,7 +521,7 @@ a.link{
 	float: right;
 	margin-top: -100px;
 }
-@media(max-width:768px) {
+@media(max-width:767px) {
 	#apartments {
 		padding: 80px 0 120px 0;
 		text-align: center;
@@ -529,7 +533,24 @@ a.link{
 		margin-bottom: 30px;
 	}
 }
-
+@media(min-width:768px){
+	#apartments img {
+		margin-top: 0px;
+	}
+	#apartments h3{
+		text-align: right;
+	}
+}
+@media(min-width:768px) and (max-width: 800px){
+	#apartments {
+		padding: 40px 0 120px 0;
+	}	
+}
+@media(min-width:1024px){
+	#apartments img {
+		margin-top: -100px;
+	}
+}
 
 
 /* FEATURES  */	
